# ifpga-mapper

./: README.md
src/: README.md
src/iFPGA/: CMakeLists.txt  README.md  install_dependences.sh
src/iFPGA/config/: internal_config.yaml
src/iFPGA/data/: result_format.txt
src/iFPGA/data/ifpga_res/: adder_synthesis_ifpga_1.v
src/iFPGA/data/result/: adder_7_LUT_synthed.bench  adder_LUT_synthed.bench  adder_synthed.dot  adder_synthed.v  adder_synthed_demo_1.v.dot  adder_yosys_anlogic.dot  adder_yosys_anlogic.v  adder_yosys_ice40.dot  adder_yosys_ice40.v  ctrl_7_LUT_synthed.bench  ctrl_op_synthed.dot  ctrl_op_synthed.v
src/iFPGA/doc/: iFPGA.xmind  interface.xmind  lut_mapping_adder.docx
src/iFPGA/include/: CMakeLists.txt
src/iFPGA/include/algorithms/: aig_with_choice.hpp  cleanup.hpp  network_to_klut.hpp  ref_deref.hpp
src/iFPGA/include/base/: events.hpp  node.hpp  storage.hpp
src/iFPGA/include/cut/: cut.hpp  cut_enumeration.hpp  cut_set.hpp  mf_cut_enumeration.hpp  rewrite_cut_enumeration.hpp  wiremap_cut_enumeration.hpp
src/iFPGA/include/io/: reader.hpp  writer.hpp
src/iFPGA/include/io/detail/: write_verilog.hpp  writer_lut.hpp
src/iFPGA/include/map/: flow_manager.hpp  klut_mapping.hpp  mockturtle_flow_manager.hpp
src/iFPGA/include/misc/: ifpga_namespaces.hpp  truth_table_cache.hpp
src/iFPGA/include/network/: aig_network.hpp  klut_network.hpp
src/iFPGA/include/opt/: balance.hpp  rewrite.hpp
src/iFPGA/include/opt/detail/: node_resynthesis.hpp
src/iFPGA/include/techmap-lib/: lut_cell_lib.hpp
src/iFPGA/include/utils/: range.hpp  tic_toc.hpp  util.hpp
src/iFPGA/lib/: CMakeLists.txt
src/iFPGA/lib/mockturtle-master/include/mockturtle/algorithms/: cut_enumeration.hpp  lut_mapping.hpp
src/iFPGA/lib/mockturtle-master/include/mockturtle/io/: write_verilog.hpp
src/iFPGA/lib/mockturtle-master/include/mockturtle/networks/: aig.hpp
src/iFPGA/src/: ifpga.cpp
src/iFPGA/test/: CMakeLists.txt  test_aig_with_choice.cpp  test_network_to_klut.cpp  test_node_resynthesis.cpp  test_subgraph_to_network.cpp
src/yosys/: .dockerignore
src/yosys/passes/techmap/: Makefile.inc  abc.cc  ifpga.cc
test/main_test/: README.md  config.ini
test/main_test/ifpga_cases/ADDERFDS_comb/: ADDERFDS_comb.aig
test/main_test/ifpga_cases/C1355.iscas_comb/: C1355.iscas_comb.aig
test/main_test/ifpga_cases/C17.iscas_comb/: C17.iscas_comb.aig
test/main_test/ifpga_cases/C2670.iscas_comb/: C2670.iscas_comb.aig
test/main_test/ifpga_cases/C3540.iscas_comb/: C3540.iscas_comb.aig
test/main_test/ifpga_cases/C432.iscas_comb/: C432.iscas_comb.aig
test/main_test/ifpga_cases/C499.iscas_comb/: C499.iscas_comb.aig
test/main_test/ifpga_cases/C7552.iscas_comb/: C7552.iscas_comb.aig
test/main_test/ifpga_cases/C880.iscas_comb/: C880.iscas_comb.aig
test/main_test/ifpga_cases/CM162_comb/: CM162_comb.aig
test/main_test/ifpga_cases/CM42_comb/: CM42_comb.aig
test/main_test/ifpga_cases/CM82_comb/: CM82_comb.aig
test/main_test/ifpga_cases/CM85_comb/: CM85_comb.aig
test/main_test/ifpga_cases/DSP_comb/: DSP_comb.aig
test/main_test/ifpga_cases/PARITYFDS_comb/: PARITYFDS_comb.aig
test/main_test/ifpga_cases/ac97_ctrl_comb/: ac97_ctrl_comb.aig
test/main_test/ifpga_cases/adder/: testinfo.ini
test/main_test/ifpga_cases/arbiter/: testinfo.ini
test/main_test/ifpga_cases/b02_comb/: b02_comb.aig
test/main_test/ifpga_cases/b03_comb/: b03_comb.aig
test/main_test/ifpga_cases/b04_comb/: b04_comb.aig
test/main_test/ifpga_cases/b07_comb/: b07_comb.aig
test/main_test/ifpga_cases/b08_comb/: b08_comb.aig
test/main_test/ifpga_cases/b10_comb/: b10_comb.aig
test/main_test/ifpga_cases/b11_comb/: b11_comb.aig
test/main_test/ifpga_cases/b12_comb/: b12_comb.aig
test/main_test/ifpga_cases/b13_comb/: b13_comb.aig
test/main_test/ifpga_cases/b15_comb/: b15_comb.aig
test/main_test/ifpga_cases/b17_comb/: b17_comb.aig
test/main_test/ifpga_cases/b18_1_comb/: b18_1_comb.aig
test/main_test/ifpga_cases/b21_comb/: b21_comb.aig
test/main_test/ifpga_cases/b22_1_comb/: b22_1_comb.aig
test/main_test/ifpga_cases/b22_comb/: b22_comb.aig
test/main_test/ifpga_cases/bar/: testinfo.ini
test/main_test/ifpga_cases/cavlc/: testinfo.ini
test/main_test/ifpga_cases/cc_comb/: cc_comb.aig
test/main_test/ifpga_cases/ctrl/: testinfo.ini
test/main_test/ifpga_cases/dalu_comb/: dalu_comb.aig
test/main_test/ifpga_cases/dec/: testinfo.ini
test/main_test/ifpga_cases/div/: testinfo.ini
test/main_test/ifpga_cases/f51m_comb/: f51m_comb.aig
test/main_test/ifpga_cases/frg2_comb/: frg2_comb.aig
test/main_test/ifpga_cases/hyp/: testinfo.ini
test/main_test/ifpga_cases/i2c/: testinfo.ini
test/main_test/ifpga_cases/int2float/: testinfo.ini
test/main_test/ifpga_cases/log2/: testinfo.ini
test/main_test/ifpga_cases/max/: testinfo.ini
test/main_test/ifpga_cases/mem_ctrl/: testinfo.ini
test/main_test/ifpga_cases/multiplier/: testinfo.ini
test/main_test/ifpga_cases/mux_cl_comb/: mux_cl_comb.aig
test/main_test/ifpga_cases/pair_comb/: pair_comb.aig
test/main_test/ifpga_cases/pci_spoci_ctrl_comb/: pci_spoci_ctrl_comb.aig
test/main_test/ifpga_cases/pcle_cl_comb/: pcle_cl_comb.aig
test/main_test/ifpga_cases/pcler8_cl_comb/: pcler8_cl_comb.aig
test/main_test/ifpga_cases/pm1_comb/: pm1_comb.aig
test/main_test/ifpga_cases/priority/: testinfo.ini
test/main_test/ifpga_cases/router/: testinfo.ini
test/main_test/ifpga_cases/s13207_comb/: s13207_comb.aig
test/main_test/ifpga_cases/s1488_comb/: s1488_comb.aig
test/main_test/ifpga_cases/s1494_comb/: s1494_comb.aig
test/main_test/ifpga_cases/s15850_comb/: s15850_comb.aig
test/main_test/ifpga_cases/s298_comb/: s298_comb.aig
test/main_test/ifpga_cases/s35932_comb/: s35932_comb.aig  testinfo.ini
test/main_test/ifpga_cases/s382_comb/: s382_comb.aig
test/main_test/ifpga_cases/s38417_comb/: s38417_comb.aig
test/main_test/ifpga_cases/s38584_comb/: s38584_comb.aig
test/main_test/ifpga_cases/sin/: testinfo.ini
test/main_test/scripts/: case.py
test/mapper_test/: README.md  config.ini  consumer_config.yaml  gmon.out  mapper_test.py
(+853 files in other folders)
